fix: modal z-index

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    padding: 2rem;
+    /* padding: 2rem; */
     margin: 0;
 }
 *{
@@ -55,6 +55,7 @@ a{
 /* Modal */
 .modal-interstitial{
     display: none;
+    z-index: 5;
 }
 .modal-content{
     position: relative;
